--- a/Feb17MongodbAssignement.ipynb
+++ b/Feb17MongodbAssignement.ipynb
@@ -154,7 +154,7 @@
    ],
    "source": [
     "import pymongo\n",
-    "client = pymongo.MongoClient(\"mongodb+srv://dcm:Durgesh.1985@cluster0.3x0yt95.mongodb.net/?retryWrites=true&w=majority\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://USER:PASSWORD@cluster0.3x0yt95.mongodb.net/?retryWrites=true&w=majority\")\n",
     "print(client)"
    ]
   },
